fix: hide the overflowed content

--- a/src/ui/stylesheets/app-components.css
+++ b/src/ui/stylesheets/app-components.css
@@ -249,6 +249,7 @@ div.user__avatar img {
   display: flex;
   gap: var(--size-xxxsmall);
   align-items: center;
+  overflow: hidden;
 }
 
 .preview__tag__color {
